==> jschroeder89/BioMech_Praktikum/bootloader/AMiRo-BLT/Target/Modules/DiWheelDrive_1-1/Boot/hooks.c <==
#include "boot.h"                                /* bootloader generic header          */
#include "stm32f10x.h"                           /* STM32 registers                    */
#include "stm32f10x_conf.h"                      /* STM32 peripheral drivers           */
#define BACKDOOR_ENTRY_TIMEOUT_MS 500
#define SYS_PD_N_PIN      GPIO_Pin_8
#define SYS_PD_N_GPIO     GPIOC
#define SYS_SYNC_N_PIN    GPIO_Pin_1
#define SYS_SYNC_N_GPIO   GPIOC

blt_bool CpuUserProgramStartHook(void)
{
  /* evaluate the fsm state */
  switch (boot_state) {
    case BOOT_OS_SYNC:
    {
      /* wait for the SYS_SYNC_N signal to go down */

      if (GPIO_ReadInputDataBit(SYS_SYNC_N_GPIO, SYS_SYNC_N_PIN) == Bit_RESET) {
        boot_state = BOOT_OS_START;
      }
      return BLT_FALSE;
      break;
    }
    case BOOT_OS_START:
    {
      /* pull down SYS_SYNC_N to indicate that the module is busy
       * note: This is optional at this point. The OS however MUST pull down SYS_SYNC_N until it is ready */
      GPIO_ResetBits(SYS_SYNC_N_GPIO, SYS_SYNC_N_PIN);
      return BLT_TRUE;
    }
    default:
      return BLT_FALSE;
      break;
  }
  return BLT_FALSE;

}

void FileFirmwareUpdateCompletedHook(void)
{
  #if (BOOT_FILE_LOGGING_ENABLE > 0)
  /* close the log file */
  if (logfile.canUse == BLT_TRUE)
  {
    f_close(&logfile.handle);
  }
  /* wait for all logging related transmission to complete */
  while(USART_GetFlagStatus(USART2, USART_FLAG_TC) == RESET);
  #endif
  /* now delete the firmware file from the disk since the update was successful */
  f_unlink(firmwareFilename);
}

void FileFirmwareUpdateLogHook(blt_char *info_string)
{
  /* write the string to the log file */
  if (logfile.canUse == BLT_TRUE)
  {
    if (f_puts(info_string, &logfile.handle) < 0)
    {
      logfile.canUse = BLT_FALSE;
      f_close(&logfile.handle);
    }
  }
  /* echo all characters in the string on UART */
  while(*info_string != '\0')
  {
    /* write character to transmit holding register */
    USART_SendData(USART2, *info_string);
    /* wait for tx holding register to be empty */
    while(USART_GetFlagStatus(USART2, USART_FLAG_TXE) == RESET);
    /* point to the next character in the string */
    info_string++;
  }
}
